created remaining required container for landing page

--- a/landing_page/src/container/LandingPage/index.css
+++ b/landing_page/src/container/LandingPage/index.css
@@ -68,3 +68,87 @@
     border-radius: 50%;
     background-color: rgba(84, 84, 212, 0.1);
 }
+.box-5-heading{
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: -1.69px;
+    color: #19191b;
+}
+.box-5-sub-heading{
+    font-size: medium;
+    line-height: 1.86;
+    letter-spacing: -0.59px;
+    color: #696871;
+}
+.customer-review{
+    font-size: medium;
+    font-weight: 700;
+    line-height: 1.86;
+    text-align: center;
+    color: #19191b;
+}
+.customer-review-name{
+    font-size: large;
+    font-weight: 900;
+    line-height: 1.86;
+    text-align: center;
+    color: #19191b;
+}
+.customer-review-company{
+    font-size: small;
+    line-height: 1.86;
+    text-align: center;
+    color: #696871;
+}
+.left-arrow{
+    display: flex;
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 10%;
+    width: 59px;
+    height: 59px;
+    padding: 24px 21px 24px 20px;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+.right-arrow{
+    display: flex;
+    position: absolute;
+    width: 59px;
+    height: 59px;
+    margin-top: 25%;
+    margin-left: 85%;
+    padding: 24px 21px 24px 20px;
+    background-color: #5454d4;
+    border-radius: 50%;
+}
+
+.box-6-review-heading{
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 1.17;
+    letter-spacing: -1.69px;
+    text-align: center;
+    color: #5454d4;
+}
+.save{
+    width: 90px;
+    height: 25px;
+    border-radius: 4.5px;
+    background-color: #f04037;
+    color: #ffffff;
+    font-size: small;
+}
+
+.time{
+    margin: 3px 15px 1px 0;
+    font-size: small;
+    line-height: 1.56;
+    color: #696871;
+}
+.price{
+    display: flex;
+    position: relative;
+    margin-left: 500px;
+}
