--- a/landing_page/src/container/LandingPage/index.css
+++ b/landing_page/src/container/LandingPage/index.css
@@ -152,3 +152,54 @@
     position: relative;
     margin-left: 500px;
 }
+.box-6-check{
+    width: 27px;
+    height: 27px;
+    padding: 10px 7px 8px 8px;
+    border-radius: 50%;
+    background-color: #5454d4;
+}
+.box-5-space{
+    margin-top: 200px;
+}
+.box-6-sub-heading{
+    margin: 13px 0 0 19px;
+    font-size: small;
+    color: rgba(255, 255, 255, 0.7);
+    margin-left: 85px;
+}
+.box-6{
+    height: 800px;
+    background-color: #19191b
+}
+.box-6-position{
+    position: absolute;
+    margin-top: 200px;
+}
+.pricing-container{
+    width: 400px;
+    height: 390px;
+    margin: 10px;
+    background-color: #ffff;
+    justify-content: center;
+}
+.pricing-top-heading{
+    color: #5454d4;
+    font-size: small;
+}
+.pricing-sub-top-heading{
+    font-size: medium;
+}
+.price-main{
+    font-size: larger;
+}
+.pricing-button{
+    border-radius: 3px;
+    background-color: #5454d4;
+    color: #ffffff;
+}
+.price-main-container{
+    position: absolute;
+    margin-top: -220px;
+    margin-left: 180px;
+}
